[tool.poetry]
name = "ledger_importer"
version = "0.1.1"
description = "ledger_importer is a csv-to-ledger importer that can be configured in Python."
readme = "README.md"
authors = ["Florent Espanet <florent.esp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
