[tool.poetry]
name = "ledger_importer"
version = "0.5.0"
description = "ledger_importer is a csv-to-ledger importer that can be configured in Python."
readme = "README.md"
authors = ["Florent Espanet <florent.esp@gmail.com>"]
repository = "https://github.com/volnt/ledger_importer"
packages = [
         { include = "ledger_importer" },
]

[tool.poetry.scripts]
ledger_importer = "ledger_importer.__main__:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
force_single_line = true

[tool.black]
line-length=120
